<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_workspace</name>
  <version>1.0.3</version>
  <description>
    Provides the prefix level environment files for ROS 2 packages.
  </description>

  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>

  <license file="LICENSE">Apache License 2.0</license>

  <author email="steven@openrobotics.org">Steven! Ragnarök</author>

  <build_depend>ament_cmake_core</build_depend>
  <build_depend>ament_package</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
